# Pyfhel-CKKS

./: .gitignore  .gitmodules  README.md  setup.py
.github/workflows/: docker-image.yml
Pyfhel/: Afhel.pxd  PyCtxt.cpp  PyCtxt.pyx  PyPolyPtr.cpp  PyPolyPtr.pxd  PyPolyPtr.pyx  PyPtxt.cpp  PyPtxt.pyx  Pyfhel.cpp  Pyfhel.pxd  Pyfhel.pyx  __init__.py  configure  test.py
Pyfhel/Afhel/: Afseal.cpp  Afseal.h  CMakeLists.txt  Demo_Afseal_batch.cpp  utils.cpp  utils.h
Pyfhel/Afhel/Demos/: Demo_Afseal_IO.cpp  Demo_Afseal_batch.cpp  Demo_Afseal_int.cpp
Pyfhel/Afhel/cmake/: SEALConfig.cmake.in
examples/: Demo_Lab.py
