cmake_minimum_required(VERSION 3.12)

project(Afhel LANGUAGES CXX)


add_library(afhel
        afhel.h
        afseal.cpp

        # Instead of linking against the global SEAL install, grab all the files from the SEAL4Pyfhel "flattened" version
        ../SEAL/SEAL/seal/batchencoder.cpp
        ../SEAL/SEAL/seal/batchencoder.h
        ../SEAL/SEAL/seal/blake2.h
        ../SEAL/SEAL/seal/blake2-impl.h
        ../SEAL/SEAL/seal/blake2b.c
        ../SEAL/SEAL/seal/blake2xb.c
        ../SEAL/SEAL/seal/ciphertext.cpp
        ../SEAL/SEAL/seal/ciphertext.h
        ../SEAL/SEAL/seal/ckks.cpp
        ../SEAL/SEAL/seal/ckks.h
        ../SEAL/SEAL/seal/clang.h
        ../SEAL/SEAL/seal/clipnormal.cpp
        ../SEAL/SEAL/seal/clipnormal.h
        ../SEAL/SEAL/seal/common.cpp
        ../SEAL/SEAL/seal/common.h
        ../SEAL/SEAL/seal/config.h
        ../SEAL/SEAL/seal/context.cpp
        ../SEAL/SEAL/seal/context.h
        ../SEAL/SEAL/seal/croots.cpp
        ../SEAL/SEAL/seal/croots.h
        ../SEAL/SEAL/seal/decryptor.cpp
        ../SEAL/SEAL/seal/decryptor.h
        ../SEAL/SEAL/seal/defines.h
        ../SEAL/SEAL/seal/dwthandler.h
        ../SEAL/SEAL/seal/dynarray.h
        ../SEAL/SEAL/seal/encryptionparams.cpp
        ../SEAL/SEAL/seal/encryptionparams.h
        ../SEAL/SEAL/seal/encryptor.cpp
        ../SEAL/SEAL/seal/encryptor.h
        ../SEAL/SEAL/seal/evaluator.cpp
        ../SEAL/SEAL/seal/evaluator.h
        ../SEAL/SEAL/seal/fips202.c
        ../SEAL/SEAL/seal/fips202.h
        ../SEAL/SEAL/seal/galois.cpp
        ../SEAL/SEAL/seal/galois.h
        ../SEAL/SEAL/seal/galoiskeys.h
        ../SEAL/SEAL/seal/gcc.h
        ../SEAL/SEAL/seal/globals.cpp
        ../SEAL/SEAL/seal/globals.h
        ../SEAL/SEAL/seal/gsl.h
        ../SEAL/SEAL/seal/gsl_algorithm.h
        ../SEAL/SEAL/seal/gsl_assert.h
        ../SEAL/SEAL/seal/gsl_byte.h
        ../SEAL/SEAL/seal/gsl_narrow.h
        ../SEAL/SEAL/seal/gsl_pointers.h
        ../SEAL/SEAL/seal/gsl_span.h
        ../SEAL/SEAL/seal/gsl_span_ext.h
        ../SEAL/SEAL/seal/gsl_string_span.h
        ../SEAL/SEAL/seal/gsl_util.h
        ../SEAL/SEAL/seal/hash.cpp
        ../SEAL/SEAL/seal/hash.h
        ../SEAL/SEAL/seal/hestdparms.h
        ../SEAL/SEAL/seal/intel_seal_ext.h
        ../SEAL/SEAL/seal/iterator.cpp
        ../SEAL/SEAL/seal/iterator.h
        ../SEAL/SEAL/seal/keygenerator.cpp
        ../SEAL/SEAL/seal/keygenerator.h
        ../SEAL/SEAL/seal/kswitchkeys.cpp
        ../SEAL/SEAL/seal/kswitchkeys.h
        ../SEAL/SEAL/seal/locks.h
        ../SEAL/SEAL/seal/memorymanager.cpp
        ../SEAL/SEAL/seal/memorymanager.h
        ../SEAL/SEAL/seal/mempool.cpp
        ../SEAL/SEAL/seal/mempool.h
        ../SEAL/SEAL/seal/modulus.cpp
        ../SEAL/SEAL/seal/modulus.h
        ../SEAL/SEAL/seal/msvc.h
        ../SEAL/SEAL/seal/ntt.cpp
        ../SEAL/SEAL/seal/ntt.h
        ../SEAL/SEAL/seal/numth.cpp
        ../SEAL/SEAL/seal/numth.h
        ../SEAL/SEAL/seal/plaintext.cpp
        ../SEAL/SEAL/seal/plaintext.h
        ../SEAL/SEAL/seal/pointer.h
        ../SEAL/SEAL/seal/polyarithsmallmod.cpp
        ../SEAL/SEAL/seal/polyarithsmallmod.h
        ../SEAL/SEAL/seal/polycore.h
        ../SEAL/SEAL/seal/publickey.h
        ../SEAL/SEAL/seal/randomgen.cpp
        ../SEAL/SEAL/seal/randomgen.h
        ../SEAL/SEAL/seal/randomtostd.h
        ../SEAL/SEAL/seal/relinkeys.h
        ../SEAL/SEAL/seal/rlwe.cpp
        ../SEAL/SEAL/seal/rlwe.h
        ../SEAL/SEAL/seal/rns.cpp
        ../SEAL/SEAL/seal/rns.h
        ../SEAL/SEAL/seal/scalingvariant.cpp
        ../SEAL/SEAL/seal/scalingvariant.h
        ../SEAL/SEAL/seal/seal.h
        ../SEAL/SEAL/seal/secretkey.h
        ../SEAL/SEAL/seal/serializable.h
        ../SEAL/SEAL/seal/serialization.cpp
        ../SEAL/SEAL/seal/serialization.h
        ../SEAL/SEAL/seal/streambuf.cpp
        ../SEAL/SEAL/seal/streambuf.h
        ../SEAL/SEAL/seal/uintarith.cpp
        ../SEAL/SEAL/seal/uintarith.h
        ../SEAL/SEAL/seal/uintarithmod.cpp
        ../SEAL/SEAL/seal/uintarithmod.h
        ../SEAL/SEAL/seal/uintarithsmallmod.cpp
        ../SEAL/SEAL/seal/uintarithsmallmod.h
        ../SEAL/SEAL/seal/uintcore.cpp
        ../SEAL/SEAL/seal/uintcore.h
        ../SEAL/SEAL/seal/valcheck.cpp
        ../SEAL/SEAL/seal/valcheck.h
        ../SEAL/SEAL/seal/version.h
        ../SEAL/SEAL/seal/ztools.cpp
        ../SEAL/SEAL/seal/ztools.h
        )
target_compile_features(afhel PUBLIC cxx_std_17)

add_executable(demo_batch Demo_Afseal_batch.cpp)
target_link_libraries(demo_batch PRIVATE afhel)